# GemmaClip

./: .dockerignore  .env.example  .gitignore  AGENTS.md  DESIGN.md  Dockerfile  Dockerfile.web  LICENSE  Makefile  PRODUCT.md  README.md  UI_REDESIGN.md  docker-compose.web.yml  pyproject.toml
.debug/workdir/: frame_manifest.json
.github/workflows/: ci.yml
deploy/nginx/: gemmaclip.kamolpop.dev.conf
docs/: ARCHITECTURE.md  DEMO_SCRIPT.md  GEMMA_AUDIO.md  GEMMA_ROUTING.md  LEADERBOARD_FIREWORKS.md  LIVE_SMOKE_TEST.md  WEB_APP_SPEC.md  WEB_DEVELOPMENT.md  codex-prompts.md  track2-guide.md
examples/: tasks.json
lovable/src/: routeTree.gen.ts  styles.css
lovable/src/components/: AppHeader.tsx  CaptionCard.tsx  EvidenceCard.tsx  FrameCard.tsx  FrameTimeline.tsx  ProcessingStatus.tsx  RawJsonViewer.tsx  VideoMetadata.tsx
lovable/src/lib/: api.ts  (+3 more)
scripts/: create_demo_videos.py  run-web-production.ps1  run-web-production.sh
src/gemmaclip/: __init__.py  audio.py  captioner.py  download.py  frames.py  gemma_client.py  io.py  main.py  prompts.py  routed.py  validate.py  video.py
tests/: test_audio.py  test_captioner.py  test_fireworks_judge.py  test_fireworks_leaderboard.py  test_frames.py  test_io.py  test_main.py  test_routed_gemma.py  test_validate.py  test_web_adapters.py  test_web_api.py  test_web_interactive.py  test_web_jobs.py  test_web_quick_caption.py  test_web_release.py  test_web_storage.py
web/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
web/src/: main.tsx  routeTree.gen.ts  styles.css
(+77 files in other folders)
