[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gemmaclip"
version = "0.1.0"
description = "Track 2 AMD Developer Hackathon video captioning baseline pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "google-genai>=2.7.0,<3.0",
  "httpx>=0.27,<0.29",
  "Pillow>=10.0,<12.0",
  "pytest>=8.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
